--- a/src/styles/shared/Header.css
+++ b/src/styles/shared/Header.css
@@ -15,7 +15,21 @@
     color: var(--primary-color);
     cursor: pointer;
   }
-  
+  .userLinks{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    a{
+      text-decoration: none;
+      color: var(--secondary-color);
+      cursor: pointer;
+    }
+    img {
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+    }
+  }
   .auth-buttons {
     display: flex;
     gap: 10px;
