--- a/src/styles/shared/ThemeToggle.css
+++ b/src/styles/shared/ThemeToggle.css
@@ -1,12 +1,13 @@
 .toggle-container {
     display: flex;
     align-items: center;
+    padding: 0 16px;
 }
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 50px;
+    height: 25px;
 }
 .switch input {
     opacity: 0;
@@ -26,8 +27,8 @@
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 17px;
+    width: 16px;
     left: 4px;
     bottom: 4px;
     background-color: #FFFFFF;
@@ -46,6 +47,6 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 .toggle-label {
-    margin-left: 10px;
+    margin-right: 5px;
     color: var(--secondary-color);
 }
