--- a/src/styles/shared/landingPage.css
+++ b/src/styles/shared/landingPage.css
@@ -3,6 +3,14 @@
   width: 100%;
   height: 50vh;
 }
+.landingpage .after{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+}
 .landingpageImage {
   width: 100%;
   height: 50vh;
@@ -15,9 +23,22 @@
   transform: translate(-50%, -50%);
   color: white;
   text-align: center;
+  z-index: 1;
+}
+.landingpageSearch{
+  position: absolute;
+  top: 20px;
+  left: 50px;
+  color: white;
+  z-index: 1;
+  div{
+    color: white;
+  }
 }
 .landingpageContent {
   padding: 50px;
+  background-color: var(--background-color);
+  min-height: calc(100vh - 535px);
 }
 .landingpageInfo {
   display: flex;
@@ -118,4 +139,20 @@ hr {
   }
   .carousel-indicators [data-bs-target]{
     background-color: var(--icon-background-color);
+  }
+  .adminActions{
+    display: flex;
+    gap: 50px;
+  }
+  .actionContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 225px;
+    height: 200px;
+    box-shadow: 4px 4px 12px 0px var(--shadow);
+    border: 0.1px solid var(--shadow);
+    cursor: pointer;
+    text-align: center;
   }
