--- a/src/styles/shared/Signup.css
+++ b/src/styles/shared/Signup.css
@@ -9,3 +9,44 @@
     width: 100%;
     margin-top: 15px;
 }
+.profileForm{
+    min-width: 350px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.profileEdit{
+    display: flex;
+    align-items: baseline;
+}
+.editIcon{
+    width: 20px;
+    height: 20px;
+    margin-left: 16px;
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.profileImg{
+    display: flex;
+    justify-content: center;
+}
+.profileIcon{
+    width: 95px;
+    height: 90px;
+}
+.profileDetails{
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+.profileLabel{
+    color: var(--primary-color);
+}
+.profileButtons{
+    display: flex;
+    justify-content: space-between;
+    gap:10px;
+    button{
+        width: 50%;
+    }
+}
