--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
     --link: #146efd;
     --footer-background-color: #FFFFFF;
     --shadow: #00800947;
+    --search-background: rgba(0, 0, 0, 0.2);
   }
 
   [data-theme="dark"]{
@@ -21,6 +22,7 @@
     --primary-color: #008009;
     --secondary-color: #FFFFFF;
     --footer-background-color: #000000;
+    --search-background: rgba(255, 255, 255, 0.2);
   }
 
   
