--- a/src/styles/shared/Signup.css
+++ b/src/styles/shared/Signup.css
@@ -46,7 +46,18 @@
     display: flex;
     justify-content: space-between;
     gap:10px;
+    margin-top: 20px;
     button{
         width: 50%;
     }
+}
+.changeNav{
+    margin-left: 10px;
+    cursor: pointer;
+    color: var(--link);
+}
+.changePassword{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
 }
