--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,108 +1,144 @@
 button {
-    padding: 5px 10px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: transparent;
-  }
-  
-  /* Primary button styles */
-  button.primary {
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-  }
-      
-  /* Secondary button styles */
-  button.secondary {
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-  }
-
-  button.secondary:hover {
-    color: var(--secondary-color);
-    border: 1px solid var(--primary-color);
-    background-color: var(--primary-color);
-  }
-
-  button:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-  }
-  
-  label {
-    font-size: 14px;
-    color: var(--secondary-color);
-    margin-bottom: 5px;
-  }
-  
-  /* Global input field styles */
-  input[type="text"],
-  input[type="password"],
-  input[type="email"],
-  input[type="tel"],
-  input[type="file"],
-  textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-bottom: 10px;
-    background: var(--background-color);
-  }
-  
-  input[type="text"]:focus,
-  input[type="password"]:focus,
-  input[type="email"]:focus,
-  input[type="tel"]:focus,
-  input[type="file"],
-  textarea:focus {
-    border-color: var(--secondary-color);
-    outline: none;
-  }
-  
-  textarea {
-    resize: vertical;
-  }
-
-  .link{
-    color: var(--link);
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .appContainer{
-    padding: 25px 50px;
-    min-height: calc(100vh - 140px);
-    background: var(--background-color);
-  }
-
-  .error {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-    display: flex;
-  }
-  
-  .required {
-    color: red;
-    margin-left: 5px;
-  }
-
-  .dropdown-menu.show {
-    background: var(--background-color);
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: transparent;
 }
-.dropdown-item:active {  
+
+/* Primary button styles */
+button.primary {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
+/* Secondary button styles */
+button.secondary {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+button.secondary:hover {
+  color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
   background-color: var(--primary-color);
 }
 
-.errorContainer{
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- padding: 100px;
- background: var(--background-color);
- height: 100vh;
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+label {
+  font-size: 14px;
+  color: var(--secondary-color);
+  margin-bottom: 5px;
+}
+
+/* Global input field styles */
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
+input[type="file"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background: var(--background-color);
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="file"],
+textarea:focus {
+  border-color: var(--secondary-color);
+  outline: none;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.link {
+  color: var(--link);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.appContainer {
+  padding: 25px 50px;
+  min-height: calc(100vh - 140px);
+  background: var(--background-color);
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  display: flex;
+}
+
+.required {
+  color: red;
+  margin-left: 5px;
+}
+
+.dropdown-menu.show {
+  background: var(--background-color);
+}
+.dropdown-item:active {
+  background-color: var(--primary-color);
+}
+
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
+  background: var(--background-color);
+  height: 100vh;
+}
+.loader {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper-class {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+}
+.dateContainer {
+  display: flex;
+  align-items: baseline;
+}
+.react-datepicker-wrapper {
+  margin: 0 20px;
+}
+.react-datepicker__input-container {
+  input {
+    margin-bottom: 0;
+  }
+}
+.resetPassword {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  min-width: 320px;
+  margin: auto;
 }
