--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,6 +25,12 @@ button.secondary:hover {
   background-color: var(--primary-color);
 }
 
+button.cancel {
+  color: var(--secondary-color);
+  border: 1px solid red;
+  background-color: red;
+}
+
 button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
@@ -34,6 +40,31 @@ label {
   font-size: 14px;
   color: var(--secondary-color);
   margin-bottom: 5px;
+}
+
+.smallText{
+  font-size: 14px;
+  color: var(--secondary-color);
+}
+
+.mediumText{
+  font-size: 16px;
+  color: var(--secondary-color);
+}
+
+.largeText{
+  font-size: 18px;
+  color: var(--secondary-color);
+}
+
+.primaryText{
+  font-size: 20px;
+  color: var(--primary-color);
+}
+
+.secondaryText{
+  font-size: 16px;
+  color: var(--primary-color);
 }
 
 /* Global input field styles */
@@ -141,4 +172,8 @@ textarea {
   max-width: 400px;
   min-width: 320px;
   margin: auto;
+}
+
+.form-check-input{
+  background: var(--icon-background-color);
 }
