Checkout page and car details page

--- a/src/styles/user/CarWishlistCard.css
+++ b/src/styles/user/CarWishlistCard.css
@@ -1,3 +1,6 @@
+.wishlist{
+    background: var(--footer-background-color);
+}
 .wishListContainer{
     display: flex;
     justify-content: space-between;
