--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     --footer-background-color: #FFFFFF;
     --shadow: #00800947;
     --search-background: rgba(0, 0, 0, 0.2);
+    --rating: #FEDB2C;
   }
 
   [data-theme="dark"]{
