--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -70,6 +70,7 @@ label {
 
 /* Global input field styles */
 input[type="text"],
+input[type="number"],
 input[type="password"],
 input[type="email"],
 input[type="tel"],
@@ -84,6 +85,7 @@ textarea {
 }
 
 input[type="text"]:focus,
+input[type="number"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="tel"]:focus,
@@ -96,7 +98,10 @@ textarea:focus {
 textarea {
   resize: vertical;
 }
-
+.form-select{
+  background: var(--background-color);
+  color: var(--secondary-color);
+}
 .link {
   color: var(--link);
   text-decoration: underline;
